Added an endpoint for creating a Course entity
