# internal/delivery/http/v1/courses.go
@@ -3,6 +3,7 @@ package v1
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/zhuravlev-pe/course-watch/internal/repository"
+	"github.com/zhuravlev-pe/course-watch/internal/service"
 	"net/http"
 )
 
@@ -10,6 +11,7 @@ func (h *Handler) initCoursesRoutes(api *gin.RouterGroup) {
 	courses := api.Group("/courses")
 	{
 		//courses.GET("", h.getAllCourses)
+		courses.POST("/", h.create)
 		courses.GET("/:id", h.getCourseById)
 	}
 }
@@ -44,4 +46,31 @@ func (h *Handler) getCourseById(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, course)
+}
+
+// @Summary Creates a new Course entity
+// @Tags courses
+// @Description Creates a new Course entity
+// @ModuleID create
+// @Accept  json
+// @Produce  json
+// @Param input body service.CreateCourseInput true "sign up info"
+// @Success 201 "The generated id is returned in Location header"
+// @Failure 400 {object} response
+// @Failure 500 {object} response
+// @Router /courses/ [post]
+func (h *Handler) create(c *gin.Context) {
+	var input service.CreateCourseInput
+	if err := c.BindJSON(&input); err != nil {
+		h.errorResponse(c, http.StatusBadRequest, "invalid input body")
+		return
+	}
+	course, err := h.services.Courses.Create(c.Request.Context(), input)
+	if err != nil {
+		//TODO: discriminate between validation errors, logic errors and internal server errors
+		h.errorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+	c.Header("Location", "/"+course.Id)
+	c.Status(http.StatusCreated)
 }
